--- a/4000s24.html
+++ b/4000s24.html
@@ -119,7 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
                                                     
@@ -162,7 +163,10 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/26</span><span class="course-task col-md-10"> 
+                                                        If $[K:F]=n$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $\deg{p(x)}$ divides $n$. If $[K:F]$ is prime, and $\alpha \in K\setminus{F}$, then $K = F[\alpha]$. Examples of degree problems.
+                                                      </span></li> 
+  
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/24</span><span class="course-task col-md-10"> 
                                                         The degree is multiplicative &quot;in towers.&quot; If $K$ is an extension of $F$ of finite degree, every element of $K$ is algebraic over $F$.
                                                       </span></li> 
