--- a/3100s24.html
+++ b/3100s24.html
@@ -120,7 +120,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                       
                                                   <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
 
@@ -164,7 +165,7 @@
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/24</span><span class="course-task col-md-10"> 
                                                         Midterm #3.
                                                        </span></li>
-                                                       
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/22</span><span class="course-task col-md-10"> 
                                                         Introduction to Taylor series. If $f$ has a power series valid on an open interval centered at $0$, that power series must be its Taylor series. Computation of Taylor series of $e^x, \sin x, \cos x$. A pathological example.
                                                        </span></li>
