--- a/3100s24.html
+++ b/3100s24.html
@@ -161,6 +161,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                   
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/26</span><span class="course-task col-md-10"> 
+                                                    Statement of Taylor's theorem. Applications to error estimates.
+                                                </span></li>
+
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/24</span><span class="course-task col-md-10"> 
                                                         Midterm #3.
