--- a/3100s24.html
+++ b/3100s24.html
@@ -162,6 +162,11 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
                                                    
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/29</span><span class="course-task col-md-10"> 
+                                                        Sketch of a proof of Taylor's theorem. $e^x, \sin x, \cos x$ are represented everywhere by their Taylor series.
+                                                    </span></li>
+    
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/26</span><span class="course-task col-md-10"> 
                                                     Statement of Taylor's theorem. Applications to error estimates.
                                                 </span></li>
@@ -396,7 +401,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                     <li class="with-bullet">Midterm #1: Friday, February 9</li>
                                                     <li class="with-bullet">Midterm #2: Friday, March 22</li>
                                                     <li class="with-bullet">Midterm #3: <del>Friday, April 19</del> Wednesday, April 24</li>
-                                                    <li class="with-bullet">Final exam: Wed, May 1, 12:00-3:00 PM (location TBA)</li>
+                                                    <li class="with-bullet">Final exam: Wed, May 1, 12:00-3:00 PM (usual classroom)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
                                             </div>
