--- a/4000s24.html
+++ b/4000s24.html
@@ -163,6 +163,10 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/29</span><span class="course-task col-md-10"> 
+                                                        For every prime $p$ and each positive integer $n$, there is a field of size $p^n$. Every finite field has size $p^n$ for some prime $p$ and some positive integer $n$. Bonus theorem (no proof): Any two finite fields of the same size are isomorphic.
+                                                      </span></li> 
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/26</span><span class="course-task col-md-10"> 
                                                         If $[K:F]=n$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $\deg{p(x)}$ divides $n$. If $[K:F]$ is prime, and $\alpha \in K\setminus{F}$, then $K = F[\alpha]$. Examples of degree problems.
                                                       </span></li> 
@@ -408,7 +412,7 @@
                                                     <li class="with-bullet">Midterm #2: Wednesday, March 27</li>
                                                     <li class="with-bullet">Midterm #3: Friday, April 19</li>
                                                         <li class="with-bullet">Final exam: Friday, May 3
-                                                            12:00 - 3:00 PM (location TBA)</li>
+                                                            12:00 - 3:00 PM (usual classroom)</li>
                                                     </ul>
                                                     <p>No make-up exams will be given. The final exam <strong>is cumulative</strong>. Your grade is made up of the following weighted components:
                                                     </p>
