research page update

--- a/research.html
+++ b/research.html
@@ -2566,7 +2566,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Distribution mod $p$ of Euler's totient and the sum of proper divisors</span>  <span class="paper-author">(w/ N. Lebowitz-Lockard and A. Singha Roy)</span>          </h4>
                         <p>
-                        <a href="https://projecteuclid.org/journals/michigan-mathematical-journal"><span class="journal-name">Michigan Math. J.</span></a>  (<span class="paper-year">to appear</span>)</p>
+                        <a href="https://projecteuclid.org/journals/michigan-mathematical-journal"><span class="journal-name">Michigan Math. J.</span></a>  74 (<span class="paper-year">2024</span>), 143--166</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/equidistributionphis.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2843,6 +2843,27 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                         </p>
                     </div>
                 </li> 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">The distribution of intermediate prime factors</span>  <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span>          </h4>
+                        <p>
+                            <a href="https://ijm.math.illinois.edu/"><span class="journal-name">Illinois J. Math.</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/middleprime.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper144" aria-expanded="false" aria-controls="paper144">Abstract</a>
+                            <div class="collapse" id="paper144">
+                                <div class="well paper-abtract-content">
+                                    <p> Let $P^{(1/2)}(n)$ denote the middle prime factor of $n$ (taking into account multiplicity). More generally, one can consider, for any $\alpha \in (0,1)$, the $\alpha$-positioned prime
+                                        factor of $n$, $P^{(\alpha)}(n)$. It has previously been shown that $\log\log P^{(\alpha)}(n)$ has normal order
+                                        $\alpha \log \log x$, and its values follow a Gaussian distribution around this value. We extend this
+                                        work by obtaining an asymptotic formula for the count of $n \le x$ for which $P^{(\alpha)}(n)=p$, for
+                                        primes $p$ in a wide range up to $x$. We give several applications of these results, including                                        an exploration of the geometric mean of the middle prime factors, for which we find that $\frac{1}{x}\sum_{1 < n \le x} \log P^{(1/2)}(n) \sim A (\log{x})^{\phi-1}$, where $\phi$ is the golden ratio, and $A$ is an explicit constant. Along the way we obtain an analogue of Lichtman's recent work on the &quot;dissected&quot; Mertens' theorem sums $\sum_{P^{+}(n)\le y,~\Omega(n)=k} \frac{1}{n}$ for large values of $k$.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
 
 
 
@@ -2860,15 +2881,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                             <div class="module-content col-sm-9">
                                                 <ul class="paper-list list">
                                                
-
-            <li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">The distribution of intermediate prime factors</span>
-        <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/middleprime.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
-
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
         <h4> <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>
