--- a/research.html
+++ b/research.html
@@ -2810,7 +2810,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Half-factorial real quadratic orders</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://link.springer.com/journal/13/volumes-and-issues"><span class="journal-name">Arch. Math. (Basel)</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://link.springer.com/journal/13/volumes-and-issues"><span class="journal-name">Arch. Math. (Basel)</span></a> 122(<span class="paper-year">2024</span>), 491--500</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
