research page update

--- a/research.html
+++ b/research.html
@@ -2903,7 +2903,17 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
         <span class="paper-author"></span></h4>
     </div>
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SchinzelWojcik.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
+</li>        
+
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Towards a Schinzel--Wójcik theorem for number fields</span>
+        <span class="paper-author"></span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SW-numberfield.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
+
+
 </ul>
                                             </div>
                                         </div>
