--- a/research.html
+++ b/research.html
@@ -2865,6 +2865,23 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     </div>
                 </li> 
 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Review of: <span class="underline">Excursions in Number Theory, Algebra, and Analysis</span>, by Kenneth Ireland and Al Cuoco</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <!-- <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paperR" aria-expanded="false" aria-controls="paperR">Abstract</a>
+                            <div class="collapse" id="paperR">
+                                <div class="well paper-abtract-content">
+                                    <p>  It is well known that factorization is not unique in $\Z[\sqrt{-5}]$. We give a short, self-contained proof that $\Z[\sqrt{-5}]$ is &quot;halfway&quot; towards being a unique factorization domain: For every nonzero, nonunit $\alpha \in \Z[\sqrt{-5}]$, any two factorizations of $\alpha$ into irreducibles involve the same number of factors.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div> -->
+                </li> 
 
 
 
