--- a/research.html
+++ b/research.html
@@ -2871,7 +2871,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                         <p>
                             <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> (<span class="paper-year">to appear</span>)</p>
                     </div>
-                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/IrelandCuoco.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <!-- <div class="paper-abstract col-md-12 col-xs-12">
                         <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paperR" aria-expanded="false" aria-controls="paperR">Abstract</a>
                             <div class="collapse" id="paperR">
