added AMS-UMI talk

--- a/research.html
+++ b/research.html
@@ -3160,7 +3160,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">Stretching, the truth about unique factorization</span>
                                                             </h4>
-                                                            <p><span><a href="https://www.ntwebseminar.org/">Number Theory Web Seminar</a>; February 2024
+                                                            <p><span><a href="https://www.ntwebseminar.org/">Number Theory Web Seminar</a>; February 2024. See also: <a href="AMS-UMI.pdf" target="_blank">short version</a> for the 2024 AMS-UMI meeting in Palermo, Italy.
                                                             </span></p>
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/NTS-Feb29-corrected.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
