prepare for Fall 2024

--- a/index.html
+++ b/index.html
@@ -138,13 +138,10 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Teaching (Spring 2024)</h6>
+                                                <h6>Teaching (Fall 2024)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <ul>
-                                                    <li><a href="3100s24.html">MATH 3100</a>: Sequences and Series
-													<li><a href="4000s24.html">MATH 4000</a>: Modern Algebra</li>
-                                                  </ul>
+                                             <p>Watch this space!</p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
