--- a/3100f24.html
+++ b/3100f24.html
@@ -163,7 +163,7 @@
                                                 <h6>Textbook</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>Our primary resource will be the MATH 3100 course notes developed by UGA Professor Emeritus <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://pollack.uga.edu/3100s24/SANDS13.pdf">download the notes</a> here. These notes were written with this course in mind and we will follow them closely for about 80%  of the semester.</p>
+                                                <p>Our primary resource will be the MATH 3100 course notes developed by UGA Professor Emeritus <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://pollack.uga.edu/3100f24/SANDS13.pdf">download the notes</a> here. These notes were written with this course in mind and we will follow them closely for about 75%  of the semester.</p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
