--- a/3100f24.html
+++ b/3100f24.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MATH 3100: Sequences and Series | Paul Pollack</title>
+    <title>MATH 3100: Introduction to Mathematical Analysis | Paul Pollack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
@@ -92,7 +92,7 @@
                                     <div class="card__image course-block row col-sm-12">
                                         <div class="course-title bg__3">
                                             <div class="col-md-9">
-                                                <h4>MATH 3100: Sequences and Series</h4>
+                                                <h4>MATH 3100: Introduction to Mathematical Analysis</h4>
                                                 <h5>MWF 1:50 PM-2:40 PM Boyd Research and Education Center, Room 304</h5>
                                             </div>
                                             <div class="col-md-3 semester-wrapper text-right"><span class="semester">Fall 2024</span></div>
@@ -148,11 +148,13 @@
                                                 <h6>Course synopsis</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>The <a href="https://bulletin.uga.edu/CoursesHome?cid=973">UGA bulletin</a> describes the content of MATH 3100 as follows (see also the <a href="https://capa.uga.edu/">CAPA</a> <a href="/3100f23/CAPA.pdf">description</a>):</p>
-                                                <blockquote>Precise definitions of limit and convergence concepts; practical tests for convergence of infinite series; power series representations and numerical error estimates; applications to calculus and explicit summation formulae; trigonometric series.
+                                                <p>UGA's <a href="https://capa.uga.edu/">CAPA</a> system contains the following Course Description of MATH 3100:</p>
+                                                <blockquote>
+                                                    Precise description of the real number system; rigorous treatment of limits and convergence for sequences, series, and functions; continuity and the maximum and intermediate value theorems; differentiation and the mean value theorem; Taylor approximation.
                                                 </blockquote>
-                                                <p>As far as topics are concerned, this is an adequate broad strokes description (although we may not cover all of these topics). However, that summary fails to capture the spirit of the course.</p>
-                                                <p>Our mission (should you choose to accept it) is to become reacquainted with sequences and series, and to carefully study the basic structural properties of the real numbers that make proving results about sequences and series possible. I say "reacquainted" because many of the topics we discuss will be ones you have met in calculus. While there will be a lot of common terminology, the emphasis in this course is likely to be very different than any calculus course you may have had so far. Calculus courses usually stress the ability to solve a wide range of problems. In this course, we will aim at depth rather than breadth. We will focus our attentions on more foundational issues, with the goal of developing a deep understanding of what's `really going on'.
+                                                <p>Those are indeed the topics we'll aim to cover this term. But if you really want to understand what sort of fine mess/math you've gotten yourself into, it will be useful to take a step back and think more philosophically. What is this course doing in the major?
+                                                <p> There are two answers to this, equally important. On the one hand, this course aims to introduce you to one of  primary strands of mathematical thinking, &quot;mathematical analysis.&quot; (Many would say that &quot;algebra&quot; and &quot;analysis&quot; are the two cornerstones of mathematics.)
+                                                    Analysis is the that branch of mathematics that grew out of calculus. So why not just call it calculus? We use a different word because we have a different focus. Calculus courses aim primarily to equip you to solve a wide range of problems. Analysis, at its most basic level, is about understanding why those solution methods make sense. That is, we want to understand the theory behind the practice. 
                                                 </p>
                                                 <p>A second raison d'être of this course is that you continue the mathematical apprenticeship which you begun in MATH 3200. This includes the construction of carefully reasoned mathematical proofs. <strong>You should not expect this to be easy</strong>; indeed, as you mature as a mathematician, you will find yourself confused a good deal of the time! (By the time you get to be a professional mathematician, you are constantly confused.) I will do my best to guide you through the difficulties and to help you come out the other side. Of course, this depends a great deal on your own engagement with the material --- both in class and in office hours.
                                                 </p>
