--- a/3200f24.html
+++ b/3200f24.html
@@ -154,7 +154,7 @@
                                                     &quot;higher&quot; mathematics is, and how it differs from the more terrestrial flavor of mathematics you are likely accustomed to.</p>
                                                 <p>A useful way of conceptualizing higher mathematics can be seen in a common name people have for courses like MATH 3200. MATH 3200 is what many people would call a &quot;transition course&quot. The transition is <i>away</i> from a focus on computation, and away from an emphasis on correct answers as the end goal. The transition is <i>towards</i> a focus on logical reasoning, and towards an emphasis on deep conceptual understanding.
                                                 </p>
-                                            <p> Why is there such an emphasis placed on logical reasoning? The answer is: Communication! If two groups of people are given the same mathematical problem, the group claiming a solution needs to be able to convince the others that they indeed have found a solution. </p><p>
+                                            <p> Why is there such an emphasis placed on logical reasoning? One answer is: Communication! If two groups of people are given the same mathematical problem, the group claiming a solution needs to be able to convince the others that they indeed have found a solution. </p><p>
                                         Depending on the problem, convincing someone you have a solution can be easy or difficult. As an example of the former, suppose you are asked to prove that 2024 can be written as a sum of four squares of integers. If you know that $2024 = 4^2 + 6^2 + 6^2 + 44^2$, you can convince someone else of this fact just by showing them that equation.  But what if the problem is as follows?</p>
 <p><tt><b>PROBLEM</b>: Show that <i>every</i> positive integer is a sum of four squares.</tt></p>
                                         <p>How could you convince someone that you solved <i>that</i>? It would not be enough to communicate representations of integers up to $100$, $1000$, or $10^{100}$, as there are infinitely many numbers beyond any of these limits. What is needed here is a logical argument, starting from points both parties can agree upon, and which proceeds in a manner that both parties endorse. This is what is meant by <b>mathematical proof</b>. The goal of this class is to introduce you to the art and science of writing mathematical proofs.</p>
@@ -167,7 +167,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <p>This class is, unapologetically, structured to emphasize <i>active learning</i>. Active learning is the crazy idea is that you learn mathematics best by doing mathematics, not by hearing someone else talk about it. Just as you hone your athletic abilities not by sitting on the bench but by getting out in the field and running after the sportsball, you hone your mathletic abilities not by listening to me lecture but by solving math problems.  </p>
-                                                <p> What does this mean in practice? If you haven't taken other classes that emphasize active learning, you should expect a different kind of classroom experience. Rather than spending 50 minutes on lecture each time we meet, a typical day will start with a brief mini-lecture, summarizing the readings --- <b>readings you are expected to have completed outside of class</b>. (You should expect to have assigned reading after every lecture.) The rest of our time together will usually be devoted to problem solving with your classmates, in groups --- with occasional assistance from myself, when necessary. You can also expect that I will occasionally call on you to present solutions, and that your solutions will receive oral feedback both from myself and from your classmates. </p>
+                                                <p> What does this mean in practice? If you haven't taken other classes that emphasize active learning, you should expect a different kind of classroom experience. Rather than spending 50 minutes on lecture each time we meet, a typical day will start with a brief mini-lecture, summarizing the readings --- <b>readings you are expected to have completed outside of class</b>. (You should expect to have assigned reading after every lecture.) The rest of our time together will usually be devoted to problem solving with your classmates, in groups --- with occasional assistance from myself, when necessary. I may occasionally call on you to present solutions, and that your solutions will receive oral feedback both from myself and from your classmates. </p>
                                                 <p> This way of learning mathematics may require you to step out of your comfort zone. This is a big ask. In return, I promise to do my best to provide you with a supportive environment. It's OK to find something  difficult or confusing. That's part of learning mathematics, and the struggle is present at every level, perhaps even more so the further you advance. (I myself am confused almost all of the time.) Please help me out by doing your best to be show support to your classmates. Aim your comments to be thoughtful, respectful, and constructive.
                                                 </p>
                                                 <p> Finally, I would like to encourage you to use me as a resource, and to stop by my office hours when you have questions. Those might be questions about the reading, questions about class activities, or questions about a past or present homework assignment.
@@ -175,7 +175,7 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Textbook (REQUIRED)</h6>
+                                                <h6>Textbook (free!)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="book-list list">
@@ -194,7 +194,7 @@
                                                     </li>
                                                 </ul>
                                                 <p> We will aim to cover all five chapters.</p>
-                                                <p> It is always a good idea when learning a subject to consult multiple sources. Different authors have different styles, some of which will sing to your soul more or less than others. For the material we will cover two free online options are <a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a> by Hammack and <a href="https://scholarworks.gvsu.edu/books/7/">Mathematical Reasoning: Writing and Proof</a> by Sundstrom.  (These are optional additional resources; you are not expected or required to look at them.)</p>
+                                                <p> It is always a good idea when learning a subject to consult multiple sources. Different authors have different styles, some of which will sing to your soul more or less than others. For the material we will cover two free online options are <a href="https://richardhammack.github.io/BookOfProof/">Book of Proof</a> by Hammack and <a href="https://scholarworks.gvsu.edu/books/7/">Mathematical Reasoning: Writing and Proof</a> by Sundstrom.  (These are optional additional resources; you are not expected or required to look at them.)</p>
                                             
                                             </div>
                                         </div>
@@ -212,9 +212,9 @@
                                             <div class="module-content col-sm-9">
                                                 <p>There are two in-class midterm exams as well as a final exam.</p>
                                                 <ul>
-                                                    <li class="with-bullet">Midterm #1: Friday, Feb. 7</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, April 3</li>
-                                                    <li class="with-bullet">Final exam: Friday, May 1, 12:00 - 3:00 PM (location TBA)</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, Sept. 20</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, Nov. 1</li>
+                                                    <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (location TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
                                             </div>
@@ -229,14 +229,13 @@
                                                 <p> Your grade is made up of the following weighted components:
                                                 </p>
                                                 <ul>
-                                                    <li class="with-bullet">Quizzes: total of 10%</li>
                                                     <li class="with-bullet">Each midterm: 20% (total of 40%)</li>
-                                                    <li class="with-bullet">Homework: 20%</li>
-                                                    <li class="with-bullet">Final exam: 30%</li>
+                                                    <li class="with-bullet">Homework: 25%</li>
+                                                    <li class="with-bullet">Final exam: 35%</li>
                                                 </ul>
                                                 <p>You are expected to participate in class. In particular, attendance in this course is <strong>required</strong>. More than four unexcused absences may result in you being withdrawn from the course. Keep me posted whenever you have a conflict that requires you to miss class and this should not be an issue.
                                                 </p>
-                                                <p>All exams and quizzes are in-class, closed book, and closed notes.
+                                                <p>All exams are in-class, closed book, and closed notes.
                                                 </p>
                                                 <p>Homework will be collected in class regularly (every week or two). Late homework will not be accepted. If you have a need to turn in HW early, that can be arranged. HW problems are graded out of 10 points. You will be given an opportunity to correct your assignments and recover up to 9 of the 10 points. For this, you <b>must</b> turn in your revisions to our TA within 1 week of the date the assignment is returned to you. <b>This opportunity is only open to students who turned in a first version of the problems on time.</b>
                                                 </p>
