--- a/3200f24.html
+++ b/3200f24.html
@@ -116,7 +116,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Watch your inbox for a class questionnaire. <br> Read the preface for the student in your textbook.</span><span class="col-md-2 due-date">complete by 8/16</span><span class="col-md-1"></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Watch your inbox for a class questionnaire. <br> Read sections 1.1 and 1.2 in the course text.</span><span class="col-md-2 due-date">complete by 8/16</span><span class="col-md-1"></span>
                                                     </li>
                                                 </ul>
                                             </div>
