--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="3100s24.html">MATH 3100</a></li>
-                                         <li><a href="4000s24.html">MATH 4000</a></li>
+                                              <li><a href="3100f24.html">MATH 3100</a></li>
+                                         <li><a href="3200f24.html">MATH 3200</a></li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -141,7 +141,10 @@
                                                 <h6>Teaching (Fall 2024)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                             <p>Watch this space!</p>
+                                                <ul>
+                                                    <li class="with-bullet"><a href="3100f24.html">MATH 3100: Introduction to Mathematical Analysis</a></li>
+                                               <li class="with-bullet"><a href="3200f24.html">MATH 3200: Introduction to Higher Mathematics</a></li>
+                                                  </ul>
                                             </div>
                                         </div>
                                         <div class="module-block row">
