update course links

--- a/3200f24.html
+++ b/3200f24.html
@@ -68,7 +68,7 @@
                                         </a>
                                         <ul>
                                             <li><a href="3100f24.html">MATH 3100</a></li>
-                                            <li><a href="3200s24.html">MATH 3200</a></li>
+                                            <li><a href="3200f24.html">MATH 3200</a></li>
                                         </ul>
                                     </li>
                                 </ul>
