--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
+                                                    <li class="with-bullet"><a href="https://www.linkedin.com/in/agbolade-akande">Agbolade Akande</a> (Ph.D., 2024)</li>
                                                     <li class="with-bullet"><a href="https://komala033.github.io/">Komal Agrawal</a> (Ph.D., 2022)</li>
                                                     <li class="with-bullet"><a href="https://www.matthewrjust.com/">Matthew Just</a> (Ph.D., 2021)</li>
                                                   <li class="with-bullet"><a href="https://kubrakbenli.wixsite.com/kubrabenli">K&uuml;bra Benli</a> (Ph.D., 2020)</li><li class="with-bullet"><a href="https://noahlockard.wordpress.com/">Noah Lebowitz-Lockard</a> (Ph.D., 2019)</li>
